--- a/index.Rmd
+++ b/index.Rmd
@@ -44,7 +44,7 @@ Upon completing this activity, you should be comfortable
 
 * Estimating different coefficients in the model
 * Assessing the assumptions for a One-Way ANOVA with diagnostic plots (*Step 2 of the Six Steps of Hypothesis Testing*)
-* Performing a permutation test
+* Performing a permutation test in a One-Way ANOVA setting
 
 The "Show Answer" button still does not work.  My apologies.
 
@@ -156,7 +156,7 @@ Again, we want to use the F-value as our test statistic.
 ---
 ## Permutations for Insect Sprays
 
-We will use a `for` loop to permute the data 1000 times.  Each time we'll `shuffle` or permute the data to get a permuted test statistics.  I'll create a matrix called `Tstar` to store the permuted test statistics.
+We will use a `for` loop to permute the data 1000 times.  Each time we'll `shuffle` or permute the data to get a permuted test statistic.  I'll create a matrix called `Tstar` to store the permuted test statistics.
 
 If you want to learn more about this code, please ask.
 
@@ -169,7 +169,7 @@ for(i in 1:1000) {
 }
 ```
 
-`Tstar` now contains the permuted test statistics.  The first one is 0.36, the second one is 0.21, and so on...
+`Tstar` now contains the permuted test statistics.  The first one is `r Tstar[1,1]`, the second one is `r Tstar[2,1]`, and so on...
 
 ```{r insect-permuted-test-stats}
 head(Tstar)
@@ -189,8 +189,8 @@ for(i in 1:1000) {
 head(Tstar2)
 ```
 
-1. In the first permutation, what was the test statistic?
-2. What was the test statistic for the second permutation?
+1. In the first permutation, what was the test statistic?  Round to two decimal places.
+2. What was the test statistic for the second permutation?  Round to two decimal places.
 
 *** .hint
 The permuted test statistics are stored in `Tstar`
@@ -205,7 +205,7 @@ The permuted test statistics are stored in `Tstar`
 We create a histogram of the distribution of permuted test statistics.  The red line represents our observed test statistic.
 
 ```{r insect-null}
-hist(Tstar, xlim = c(0, 35))
+hist(Tstar, xlim = c(0, Tobs))
 abline(v = Tobs, col = "red")
 ```
 
@@ -246,7 +246,7 @@ qplot(nulldist2$result) +
 
 Do we use the left-tail or right-tail of the null distribution to find the p-value?  Approximately what is the p-value?
 
-1. Left; 0.98
+1. Left; 0.98 
 2. Left; 0.02
 3. Right; 0.98
 4. _Right; 0.02_
@@ -329,9 +329,9 @@ hist(eij, main = "Histogram of Residuals", col = "lightblue")
 
 `r take_home <- take_home + 1; take_home`)  Draw a Residuals vs Fitted values plot which shows that the Equal Variance assumption is met
 
-`r take_home <- take_home + 1; take_home`)  Draw a Normal Q-q plot which shows that the Normality assumption is violated.
+`r take_home <- take_home + 1; take_home`)  Draw a Normal Q-Q plot which shows that the Normality assumption is violated.
 
-`r take_home <- take_home + 1; take_home`)  Draw a Normal Q-q plot which shows that the Normality assumption is met.
+`r take_home <- take_home + 1; take_home`)  Draw a Normal Q-Q plot which shows that the Normality assumption is met.
 
 
 
